<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="personal_category"
        android:title="Personal Informations">

        <ListPreference
            android:defaultValue="@string/server_url_default_value"
            android:entries="@array/server_url_array"
            android:entryValues="@array/server_url_values"
            android:key="server_url"
            android:summary="%s"
            android:title="Server URL" />
        <com.toheda.app.CustomizedEditTextPreference
            android:defaultValue="services/process-list"
            android:inputType="textUri"
            android:key="@string/processes_request"
            android:summary="Enter processes request url"
            android:title="Processes request url" />
        <com.toheda.app.CustomizedEditTextPreference
            android:defaultValue="services/process-image"
            android:inputType="textUri"
            android:key="@string/process_image_request"
            android:summary="Enter process-image request url"
            android:title="Process-Image request url" />
        <com.toheda.app.CustomizedEditTextPreference
            android:defaultValue="services/contacts"
            android:inputType="textUri"
            android:key="@string/contacts_request"
            android:summary="Enter contacts request url"
            android:title="Contacts request url" />
        <Preference
            android:key="@string/reset_button"
            android:summary="Sets all preferences to default values"
            android:title="Reset settings" />
    </PreferenceCategory>
</PreferenceScreen>