<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toheda.app.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:onClick="signout"
        android:orderInCategory="100"
        android:title="Sign out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_processes"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_processes"
        app:showAsAction="always" />
</menu>
